# rs-notifier

./: Cargo.toml  README.md
src/: lib.rs  notification.rs  slack_notify.rs
