[package]
name = "rs-notifier"
version = "0.1.0"
authors = ["chengchen"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Chengchcc/rs-notifier.git"
homepage = "https://github.com/Chengchcc/rs-notifier.git"
description = "rust social application notification"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "0.11.0", features = ["json"] }